--- a/notebooks/color_quantization.ipynb
+++ b/notebooks/color_quantization.ipynb
@@ -75,7 +75,7 @@
     "sigmaspace = 50\n",
     "# load\n",
     "\n",
-    "img = cv2.imread('quantized-16.jpeg')\n",
+    "img = cv2.imread('quantized_images/quantized-16.jpeg')\n",
     "\n",
     "# apply bilateral filter\n",
     "#   d=9       : diameter of each pixel’s neighbourhood\n",
@@ -119,7 +119,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Read the image that the user referenced\n",
-    "img_path = \"smoothed.png\"\n",
+    "img_path = \"quantized_images/smoothed.png\"\n",
     "img = cv2.imread(img_path)\n",
     "\n",
     "# Convert to grayscale – contours are typically detected on single‑channel images\n",
@@ -210,7 +210,7 @@
     "plt.show()\n",
     "\n",
     "# save so the user can download\n",
-    "out_path = \"contours_only.png\"\n",
+    "out_path = \"quantized_images/contours_only.png\"\n",
     "cv2.imwrite(out_path, contour_canvas)\n",
     "print(f\"Saved to {out_path}\")"
    ],
@@ -250,7 +250,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the same demo image (replace with your own path)\n",
-    "img_path = \"smoothed.png\"\n",
+    "img_path = \"quantized_images/smoothed.png\"\n",
     "img = cv2.imread(img_path)\n",
     "if img is None:\n",
     "    raise IOError(f\"Could not read {img_path}\")\n",
@@ -296,7 +296,7 @@
     "plt.show()\n",
     "\n",
     "# Save output\n",
-    "out_path = \"contours_fine_3x3.png\"\n",
+    "out_path = \"quantized_images/contours_fine_3x3.png\"\n",
     "cv2.imwrite(out_path, canvas)\n",
     "print(f\"Saved fine‑grained contours to {out_path}\")\n"
    ],
@@ -344,7 +344,7 @@
     "thicknesses    = [1]                           # stroke width when drawing\n",
     "\n",
     "# Source image\n",
-    "img_path = \"/Users/luca/Documents/HSLU/cvai/mnz/notebooks/smoothed_20_75_75.png\"    # update to your own image if needed\n",
+    "img_path = \"/notebooks/quantized_images/smoothed_20_75_75.png\"  # update to your own image if needed\n",
     "\n",
     "# Destination directory\n",
     "out_dir = \"notebooks/finetuning\"\n",
