Find better placement of number in the image

--- a/notebooks/k-means-pascal-Update Luca.ipynb
+++ b/notebooks/k-means-pascal-Update Luca.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-30T19:05:07.403280Z",
-     "start_time": "2025-04-30T19:05:04.986733Z"
+     "end_time": "2025-04-30T19:16:03.735878Z",
+     "start_time": "2025-04-30T19:16:03.724650Z"
     }
    },
    "source": [
@@ -18,6 +18,64 @@
     "from skimage.measure import label, regionprops\n",
     "import cv2\n",
     "import os\n",
+    "from typing import Tuple\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "def find_field_center(mask: np.ndarray, num_samples: int = 50) -> Tuple[int, int]:\n",
+    "    ys, xs = np.where(mask)\n",
+    "    if len(xs) == 0:\n",
+    "        raise ValueError(\"The provided mask is empty.\")\n",
+    "\n",
+    "    min_x, max_x = xs.min(), xs.max()\n",
+    "    min_y, max_y = ys.min(), ys.max()\n",
+    "\n",
+    "    best_point: Tuple[int, int] = (min_x, min_y)\n",
+    "    best_score: float = -1.0\n",
+    "\n",
+    "    for _ in range(num_samples): # Es werden num_samples Punkte zufällig ausgewählt. Standardmässig habe ich dies auf 50 gesetzt.\n",
+    "        while True:\n",
+    "            x = random.randint(min_x, max_x)\n",
+    "            y = random.randint(min_y, max_y)\n",
+    "            if mask[y, x]:\n",
+    "                break\n",
+    "\n",
+    "        # North\n",
+    "        dn = 0\n",
+    "        for yy in range(y, min_y - 1, -1):\n",
+    "            if not mask[yy, x]:\n",
+    "                dn = y - yy\n",
+    "                break\n",
+    "\n",
+    "        # South\n",
+    "        ds = 0\n",
+    "        for yy in range(y, max_y + 1):\n",
+    "            if not mask[yy, x]:\n",
+    "                ds = yy - y\n",
+    "                break\n",
+    "\n",
+    "        # West\n",
+    "        dw = 0\n",
+    "        for xx in range(x, min_x - 1, -1):\n",
+    "            if not mask[y, xx]:\n",
+    "                dw = x - xx\n",
+    "                break\n",
+    "\n",
+    "        # East\n",
+    "        de = 0\n",
+    "        for xx in range(x, max_x + 1):\n",
+    "            if not mask[y, xx]:\n",
+    "                de = xx - x\n",
+    "                break\n",
+    "\n",
+    "        # Durschnittlicher Abstand\n",
+    "        score = (dn + ds + dw + de) / 4.0\n",
+    "        if score > best_score:\n",
+    "            best_score = score\n",
+    "            best_point = (x, y)\n",
+    "\n",
+    "    return best_point\n",
+    "\n",
     "\n",
     "def load_image(image_path):\n",
     "    image = Image.open(image_path).convert('RGB')\n",
@@ -72,10 +130,44 @@
     "            f.write(f\"{number}: RGB{color}\\n\")\n",
     "    print(f\"Legend saved to {legend_path}\")\n",
     "\n",
-    "def overlay_numbers(image_array, labeled_regions, color_to_number):\n",
+    "\n",
+    "def overlay_numbers(image_array: np.ndarray,\n",
+    "                    labeled_regions: np.ndarray,\n",
+    "                    color_to_number: dict,\n",
+    "                    font_path: str = None,\n",
+    "                    font_size: int = 20,\n",
+    "                    num_samples: int = 200) -> Image.Image:\n",
+    "    image = Image.fromarray(image_array)\n",
+    "    draw  = ImageDraw.Draw(image)\n",
+    "    if font_path:\n",
+    "        font = ImageFont.truetype(font_path, font_size)\n",
+    "    else:\n",
+    "        font = ImageFont.load_default()\n",
+    "\n",
+    "    # Pro Region einmal durchgehen\n",
+    "    for region in regionprops(labeled_regions):\n",
+    "        # War bereits vorher so im code. Ich nehme an, dass ist der Hintergrund?!\n",
+    "        if region.label == 0:\n",
+    "            continue\n",
+    "\n",
+    "        mask_full = (labeled_regions == region.label)\n",
+    "\n",
+    "        # Hier wird meine neue Funktion aufgerufen.\n",
+    "        cx, cy = find_field_center(mask_full, num_samples=num_samples)\n",
+    "\n",
+    "        # Übernahme von Pascal seinem Code\n",
+    "        color = tuple(image_array[mask_full][0])\n",
+    "        number = color_to_number.get(color, '?')\n",
+    "        draw.text((cx, cy), str(number), fill='black', font=font)\n",
+    "\n",
+    "    return image\n",
+    "\n",
+    "def OLD_overlay_numbers(image_array, labeled_regions, color_to_number):\n",
     "    image = Image.fromarray(image_array)\n",
     "    draw = ImageDraw.Draw(image)\n",
     "    font = ImageFont.load_default()\n",
+    "\n",
+    "\n",
     "\n",
     "    for region_label in np.unique(labeled_regions):\n",
     "        if region_label == 0:\n",
@@ -110,7 +202,7 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -124,8 +216,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-30T19:05:49.662489Z",
-     "start_time": "2025-04-30T19:05:45.299044Z"
+     "end_time": "2025-04-30T19:16:09.187058Z",
+     "start_time": "2025-04-30T19:16:04.640581Z"
     }
    },
    "id": "34f936c8706ff6f6",
@@ -139,7 +231,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 9
   },
   {
    "cell_type": "code",
