--- a/notebooks/k-means-pascal-Update Luca.ipynb
+++ b/notebooks/k-means-pascal-Update Luca.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-30T19:16:03.735878Z",
-     "start_time": "2025-04-30T19:16:03.724650Z"
+     "end_time": "2025-05-01T14:02:19.783537Z",
+     "start_time": "2025-05-01T14:02:19.333981Z"
     }
    },
    "source": [
@@ -202,12 +202,12 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "source": [
-    "image_path = '../test-images-mnz/castle_and_guards.jpeg'\n",
+    "image_path = '../test-images-mnz/castle_and_guards.jpg'\n",
     "save_path = '../target'\n",
     "number_colors = 16\n",
     "\n",
@@ -216,8 +216,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-30T19:16:09.187058Z",
-     "start_time": "2025-04-30T19:16:04.640581Z"
+     "end_time": "2025-05-01T14:02:38.246290Z",
+     "start_time": "2025-05-01T14:02:34.012749Z"
     }
    },
    "id": "34f936c8706ff6f6",
@@ -231,7 +231,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
    "cell_type": "code",
