--- a/notebooks/k-means-pascal.ipynb
+++ b/notebooks/k-means-pascal.ipynb
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "source": [
-    "image_path = '../test-images-mnz/castle_and_guards.jpeg'\n",
+    "image_path = '../test-images-mnz/castle.jpeg'\n",
     "save_path = '../target'\n",
     "number_colors = 16\n",
     "\n",
