--- a/notebooks/k-means-pascal-Update Roman.ipynb
+++ b/notebooks/k-means-pascal-Update Roman.ipynb
@@ -6,11 +6,12 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-01T14:02:57.836927Z",
-     "start_time": "2025-05-01T14:02:57.825136Z"
+     "end_time": "2025-05-08T18:40:39.377234Z",
+     "start_time": "2025-05-08T18:40:38.908041Z"
     }
    },
    "source": [
+    "import tqdm\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
@@ -20,66 +21,73 @@
     "import os\n",
     "from typing import Tuple\n",
     "import random\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from src.sections import RegionDetector\n",
     "\n",
     "\n",
-    "def find_field_center(mask: np.ndarray, num_samples: int = 50) -> Tuple[int, int]:\n",
-    "    ys, xs = np.where(mask)\n",
-    "    if len(xs) == 0:\n",
-    "        raise ValueError(\"The provided mask is empty.\")\n",
+    "def find_field_center(mask: np.ndarray, font_size) -> Tuple[int, int]:\n",
+    "    image_height = len(mask) - 1\n",
+    "    image_width = len(mask[0]) - 1\n",
     "\n",
-    "    min_x, max_x = xs.min(), xs.max()\n",
-    "    min_y, max_y = ys.min(), ys.max()\n",
+    "    padding = 5\n",
     "\n",
-    "    best_point: Tuple[int, int] = (min_x, min_y)\n",
-    "    best_score: float = -1.0\n",
+    "    font_width, font_height = font_size\n",
     "\n",
-    "    for _ in range(num_samples): # Es werden num_samples Punkte zufällig ausgewählt. Standardmässig habe ich dies auf 50 gesetzt.\n",
-    "        while True:\n",
-    "            x = random.randint(min_x, max_x)\n",
-    "            y = random.randint(min_y, max_y)\n",
-    "            if mask[y, x]:\n",
-    "                break\n",
+    "    font_width = font_width + (padding * 2)\n",
+    "    font_height = font_height + (padding * 2)\n",
     "\n",
-    "        # North\n",
-    "        dn = 0\n",
-    "        for yy in range(y, min_y - 1, -1):\n",
-    "            if not mask[yy, x]:\n",
-    "                dn = y - yy\n",
-    "                break\n",
     "\n",
-    "        # South\n",
-    "        ds = 0\n",
-    "        for yy in range(y, max_y + 1):\n",
-    "            if not mask[yy, x]:\n",
-    "                ds = yy - y\n",
-    "                break\n",
+    "    def outside_image(index):\n",
+    "        index_y, index_x = index\n",
     "\n",
-    "        # West\n",
-    "        dw = 0\n",
-    "        for xx in range(x, min_x - 1, -1):\n",
-    "            if not mask[y, xx]:\n",
-    "                dw = x - xx\n",
-    "                break\n",
+    "        return (\n",
+    "                (index_y < 0) or (index_y > image_height) or\n",
+    "                (index_x < 0) or (index_x > image_width)\n",
+    "        )\n",
     "\n",
-    "        # East\n",
-    "        de = 0\n",
-    "        for xx in range(x, max_x + 1):\n",
-    "            if not mask[y, xx]:\n",
-    "                de = xx - x\n",
-    "                break\n",
+    "    region_detector = RegionDetector()\n",
     "\n",
-    "        # Durschnittlicher Abstand\n",
-    "        score = (dn + ds + dw + de) / 4.0\n",
-    "        if score > best_score:\n",
-    "            best_score = score\n",
-    "            best_point = (x, y)\n",
+    "    #print('get regions: start')\n",
+    "    regions = region_detector.get_regions(mask)\n",
+    "    #print('get regions: end')\n",
     "\n",
-    "    return best_point\n",
+    "    #print(mask.shape)\n",
+    "    #print('find position')\n",
+    "    for region in regions:\n",
+    "        for middle_pixel in  region.get_region_center_middle_positions():\n",
+    "            current_x, current_y = middle_pixel\n",
+    "\n",
+    "            high_x_index = current_y, (current_x + int(font_width / 2))\n",
+    "            low_x_index = current_y, (current_x - int(font_width / 2))\n",
+    "            high_y_index = (current_y + int(font_height / 2)), current_x\n",
+    "            low_y_index = (current_y - int(font_height / 2)), current_x\n",
+    "\n",
+    "            if (\n",
+    "                    (outside_image(high_x_index)) or\n",
+    "                    (outside_image(low_x_index)) or\n",
+    "                    (outside_image(high_y_index)) or\n",
+    "                    (outside_image(low_y_index))\n",
+    "            ):\n",
+    "                continue\n",
+    "\n",
+    "            if (\n",
+    "                    (mask[high_x_index] == True) and\n",
+    "                    (mask[low_x_index] == True) and\n",
+    "                    (mask[high_y_index] == True) and\n",
+    "                    (mask[low_y_index] == True)\n",
+    "            ):\n",
+    "                return current_x, current_y\n",
+    "\n",
+    "    #print('no position found')\n",
+    "    #print('no center found')\n",
+    "    return 0, 0\n",
     "\n",
     "\n",
     "def load_image(image_path):\n",
     "    image = Image.open(image_path).convert('RGB')\n",
     "    return np.array(image)\n",
+    "\n",
     "\n",
     "def quantize_colors(image_array, n_colors):\n",
     "    # Apply Gaussian blur to smooth transitions and reduce small color noise\n",
@@ -92,6 +100,7 @@
     "    quantized_flat = kmeans.cluster_centers_[labels].astype('uint8')\n",
     "    quantized_image = quantized_flat.reshape(h, w, 3)\n",
     "    return quantized_image, labels.reshape(h, w), kmeans.cluster_centers_\n",
+    "\n",
     "\n",
     "def detect_regions_by_color(quantized_image):\n",
     "    h, w, _ = quantized_image.shape\n",
@@ -108,6 +117,7 @@
     "\n",
     "    return labeled_image\n",
     "\n",
+    "\n",
     "def filter_small_regions(labeled_image, min_size=100):\n",
     "    new_labeled = np.zeros_like(labeled_image)\n",
     "    current_label = 1\n",
@@ -119,9 +129,11 @@
     "            current_label += 1\n",
     "    return new_labeled\n",
     "\n",
+    "\n",
     "def assign_numbers(cluster_centers):\n",
-    "    color_to_number = {tuple(center.astype(int)): idx+1 for idx, center in enumerate(cluster_centers)}\n",
+    "    color_to_number = {tuple(center.astype(int)): idx + 1 for idx, center in enumerate(cluster_centers)}\n",
     "    return color_to_number\n",
+    "\n",
     "\n",
     "def save_legend(color_to_number, output_folder):\n",
     "    legend_path = os.path.join(output_folder, \"legend.txt\")\n",
@@ -131,55 +143,45 @@
     "    print(f\"Legend saved to {legend_path}\")\n",
     "\n",
     "\n",
-    "def overlay_numbers(image_array: np.ndarray,\n",
-    "                    labeled_regions: np.ndarray,\n",
-    "                    color_to_number: dict,\n",
-    "                    font_path: str = None,\n",
-    "                    font_size: int = 20,\n",
-    "                    num_samples: int = 200) -> Image.Image:\n",
+    "def overlay_numbers(\n",
+    "        image_array: np.ndarray,\n",
+    "        labeled_regions: np.ndarray,\n",
+    "        color_to_number: dict,\n",
+    "        font_path: str = None,\n",
+    "        font_size: int = 20,\n",
+    "        num_samples: int = 200\n",
+    ") -> Image.Image:\n",
     "    image = Image.fromarray(image_array)\n",
-    "    draw  = ImageDraw.Draw(image)\n",
+    "    draw = ImageDraw.Draw(image)\n",
     "    if font_path:\n",
     "        font = ImageFont.truetype(font_path, font_size)\n",
     "    else:\n",
     "        font = ImageFont.load_default()\n",
     "\n",
     "    # Pro Region einmal durchgehen\n",
-    "    for region in regionprops(labeled_regions):\n",
+    "    for region in tqdm(regionprops(  labeled_regions)):\n",
     "        # War bereits vorher so im code. Ich nehme an, dass ist der Hintergrund?!\n",
     "        if region.label == 0:\n",
     "            continue\n",
     "\n",
     "        mask_full = (labeled_regions == region.label)\n",
     "\n",
-    "        # Hier wird meine neue Funktion aufgerufen.\n",
-    "        cx, cy = find_field_center(mask_full, num_samples=num_samples)\n",
-    "\n",
-    "        # Übernahme von Pascal seinem Code\n",
     "        color = tuple(image_array[mask_full][0])\n",
     "        number = color_to_number.get(color, '?')\n",
-    "        draw.text((cx, cy), str(number), fill='black', font=font)\n",
+    "\n",
+    "        font_size = font.getsize(str(number))\n",
+    "\n",
+    "        # Hier wird meine neue Funktion aufgerufen.\n",
+    "        cx, cy = find_field_center(mask_full, font_size)\n",
+    "\n",
+    "        # Übernahme von Pascal seinem Code\n",
+    "\n",
+    "        font_width, font_height = font_size\n",
+    "\n",
+    "        draw.text((cx - int(font_width / 2), cy - int(font_height / 2)), str(number), fill='black', font=font)\n",
     "\n",
     "    return image\n",
     "\n",
-    "def OLD_overlay_numbers(image_array, labeled_regions, color_to_number):\n",
-    "    image = Image.fromarray(image_array)\n",
-    "    draw = ImageDraw.Draw(image)\n",
-    "    font = ImageFont.load_default()\n",
-    "\n",
-    "\n",
-    "\n",
-    "    for region_label in np.unique(labeled_regions):\n",
-    "        if region_label == 0:\n",
-    "            continue\n",
-    "        mask = labeled_regions == region_label\n",
-    "        coords = np.argwhere(mask)\n",
-    "        y, x = coords.mean(axis=0).astype(int)\n",
-    "        color = tuple(image_array[mask][0])\n",
-    "        number = color_to_number.get(color, '?')\n",
-    "        draw.text((x, y), str(number), fill='black', font=font)\n",
-    "\n",
-    "    return image\n",
     "\n",
     "def create_paint_by_numbers(image_path, save_path, n_colors):\n",
     "    output_folder = save_path\n",
@@ -187,6 +189,8 @@
     "\n",
     "    image_array = load_image(image_path)\n",
     "    quantized_image, label_image, cluster_centers = quantize_colors(image_array, n_colors)\n",
+    "\n",
+    "\n",
     "    labeled_regions = detect_regions_by_color(quantized_image)\n",
     "    labeled_regions = filter_small_regions(labeled_regions, min_size=150)  # tweak size\n",
     "    color_to_number = assign_numbers(cluster_centers)\n",
@@ -202,7 +206,44 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "b2631acc1d030e5b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "test = np.array([\n",
+    "    [False, False, True, True, True, True, True, False, False, False],\n",
+    "    [False, False, True, True, True, True, True, False, False, False],\n",
+    "    [False, False, True, True, True, True, True, False, False, False],\n",
+    "    [True, True, True, True, True, True, True, True, True, True],\n",
+    "    [False, False, True, True, True, True, True, False, False, False],\n",
+    "    [False, False, True, True, True, True, True, False, False, False],\n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "test_2 = np.array([False, False, True, True, True, True, True, False, False, False])\n",
+    "\n",
+    "\n",
+    "\n",
+    "ys, xs = np.where(test)\n",
+    "print(f'{ys = }')\n",
+    "print(f'{xs = }')\n",
+    "np.where(test_2)\n"
+   ],
+   "id": "31922ea6c495bd75",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -216,12 +257,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-01T14:03:02.409887Z",
-     "start_time": "2025-05-01T14:02:58.398021Z"
+     "end_time": "2025-05-08T18:40:53.804101Z",
+     "start_time": "2025-05-08T18:40:46.286690Z"
     }
    },
    "id": "34f936c8706ff6f6",
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/218 [00:00<?, ?it/s]/var/folders/5_/vxqcbv5j3lxcvs8v3yhwhrkh0000gn/T/ipykernel_54472/760004499.py:159: DeprecationWarning: getsize is deprecated and will be removed in Pillow 10 (2023-07-01). Use getbbox or getlength instead.\n",
+      "  font_size = font.getsize(str(number))\n",
+      "100%|██████████| 218/218 [00:04<00:00, 47.95it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -229,19 +279,46 @@
       "Paint-by-numbers image saved to ../target/paint_by_numbers_output.png\n",
       "Legend saved to ../target/legend.txt\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "source": [
+    "np.where(np.array([\n",
+    "    True, True\n",
+    "]))"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "8308f47d21e61c43"
+   "id": "8308f47d21e61c43",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "fd408ae92af6c5d5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "e290a0675d3680a7",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
